cycle (Nvim HEAD, the "master" branch).

EVENTS

• Renamed "nvim.find_exrc" |default-autocmds| group to "nvim.exrc".

EXPERIMENTS

• todo

LSP

• |vim.lsp.buf.selection_range()| now accepts an integer which specifies its
  direction, rather than a string `'outer'` or `'inner'`.

OPTIONS

• `'completefuzzycollect'` and `'isexpand'` have been removed.

TREESITTER

• todo

UI

• `progress` attribute removed form |ui-messages| msg_show event

VIMSCRIPT

• `complete_match()` has been removed.

==============================================================================
BREAKING CHANGES                                                *news-breaking*

These changes may require adaptations in your config or plugins.

API

• Decoration provider has `on_range()` callback.
• |nvim_get_commands()| returns `complete` as a Lua function, if it was
  defined as such.

BUILD

• todo

DIAGNOSTICS

• |diagnostic-signs| can no longer be configured with |:sign-define| or
  |sign_define()| (deprecated in Nvim 0.10 |deprecated-0.10|).
• |vim.diagnostic.disable()| and |vim.diagnostic.is_disabled()| (deprecated in
  Nvim 0.10 |deprecated-0.10|) are removed.
• The legacy signature of |vim.diagnostic.enable()| (deprecated in Nvim 0.10
  |deprecated-0.10|) is no longer supported.

EDITOR

• |i_CTRL-R| inserts named/clipboard registers (A-Z,a-z,0-9+) literally, like
  pasting instead of like user input. Improves performance, avoids broken
  formatting. To get the old behavior you can use `<C-R>=@x`.
• Buffer name URI scheme parsing more closely follows RFC3986, so for example
  "svn+ssh:", "ed2k:", and "iris.xpc:" are recognized as URI schemes.
• On Windows, Nvim no longer searches the current directory for executables
  for running external commands; prefix a relative or absolute path if you
  want the old behavior |$NoDefaultCurrentDirectoryInExePath|.

EVENTS

• |ui-messages| no longer emits the `msg_show.return_prompt`, and